--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       retries: 5
 
   app:
-    image: librarylite:0.2
+    image: szymonkacki/librarylite:0.2
     build: .
     ports:
       - "${APP_PORT:-8000}:8000"
