--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   db:
     image: postgres:15
+    container_name: librarylite_db
     environment:
       POSTGRES_USER: app_user
       POSTGRES_PASSWORD: app_pass_123
@@ -18,6 +19,7 @@ services:
   app:
     image: szymonkacki/librarylite:0.2
     build: .
+    container_name: librarylite_app
     ports:
       - "${APP_PORT:-8000}:8000"
     environment:
@@ -28,14 +30,16 @@ services:
 
   prometheus:
     image: prom/prometheus
+    container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - ./alerts.yml:/etc/prometheus/alerts.yml
     ports:
       - "9090:9090"
-  
+
   grafana:
     image: grafana/grafana
+    container_name: grafana
     ports:
       - "3000:3000"
     volumes:
