--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       retries: 5
 
   app:
-    image: szymonkacki/librarylite:0.2
+    # uses the newest version tag available from the GitHub Actions build
+    image: szymonkacki/librarylite:${LIBRARYLITE_VERSION}
     build: .
     container_name: librarylite_app
     ports:
